--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -60,6 +60,7 @@ jobs:
       ARM_CLIENT_SECRET: ${{ secrets.ARM_CLENT_SECRET }}
       ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
       ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
+      ARM_ENVIRONMENT: ${{ secrets.ARM_ENVIRONMENT }}
     runs-on: ubuntu-latest
     environment: china
 
