--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -67,6 +67,7 @@ jobs:
     defaults:
       run:
         shell: bash
+        working-directory: ./main     # ${{ github.workspace}}/main
 
     steps:
     # Checkout the repository to the GitHub Actions runner
