--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -36,7 +36,7 @@
 #     - https://help.github.com/en/actions/configuring-and-managing-workflows/creating-and-storing-encrypted-secrets
 #
 # 3. Reference the GitHub secret in step using the `hashicorp/setup-terraform` GitHub Action.
-#   Example:  test
+#   Example:
 #     - name: Setup Terraform
 #       uses: hashicorp/setup-terraform@v1
 #       with:
@@ -78,6 +78,9 @@ jobs:
       uses: hashicorp/setup-terraform@v1
       with:
         cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
+
+    - name: Print ENV variables
+      run: echo $ARM_CLIENT_ID $ARM_TENANT_ID
 
     # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
     - name: Terraform Init
