--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -80,7 +80,7 @@ jobs:
         cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
 
     - name: Print ENV variables
-      run: echo $ARM_CLIENT_ID $ARM_CLIENT_SECRET
+      run: echo $ARM_CLIENT_ID
 
     # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
     - name: Terraform Init
