--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -101,4 +101,4 @@ jobs:
 #      run: terraform apply -auto-approve -var-file="variables-prd.tfvars" #-input=false
 
     - name: Terraform Destroy resources
-      run: terraform destroy -var-file="variables-prd.tfvars"
+      run: terraform destroy -auto-approve -var-file="variables-prd.tfvars"
