--- a/.github/workflows/terraform_china.yml
+++ b/.github/workflows/terraform_china.yml
@@ -90,10 +90,10 @@ jobs:
 
     # Generates an execution plan for Terraform
     - name: Terraform Plan
-      run: terraform plan -var-file="variables-prd.tfvars" #-input=false
+      run: terraform plan -var-file="variables-dev.tfvars" #-input=false
 
       # On push to "main", build or change infrastructure according to Terraform configuration files
       # Note: It is recommended to set up a required "strict" status check in your repository for "Terraform Cloud". See the documentation on "strict" required status checks for more information: https://help.github.com/en/github/administering-a-repository/types-of-required-status-checks
     - name: Terraform Apply
       if: github.ref == 'refs/heads/"main"' && github.event_name == 'push'
-      run: terraform apply -auto-approve -auto-approve -var-file="variables-prd.tfvars" #-input=false
+      run: terraform apply -auto-approve -auto-approve -var-file="variables-dev.tfvars" #-input=false
